added some css for error messages
however, couldn't get static files working right, so had put the CSS
directly in the template.
Need to figure this out, and also how to add my own custom CSS calls
from templates using the built-in form models.

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,9 @@
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.mobile/1.1.1/jquery.mobile-1.1.1.min.css" />
         <link rel="stylesheet" href="jquerymobile.css" />
-        <style>
+        <style type="text/css" media="all">
             /* App custom styles */
+			.errorlist {color: red;}
         </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
         </script>
@@ -16,7 +17,6 @@
         <script src="jquerymobile.js">
         </script>
 		
-	
 		
 		
     </head>
