--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -26,7 +26,7 @@
         </form>
 
 
-<a href="/register/" data-rel="dialog" data-role="button" data-transition="slidedown">新しいアカウントを作成</a>
+<a href="/register/" data-role="button" data-transition="slidedown">新しいアカウントを作成</a>
 
 
 
