added edit user option, needs work still
Need to add save fuctionality to the edit user account page.

--- a/templates/timesheetapp/register.html
+++ b/templates/timesheetapp/register.html
@@ -14,7 +14,8 @@
 	<table>
 	{{ userform.as_table }}
 	</table>
-	<input type="submit" value="送信" />
+	<input type="submit" value="送信" data-inline="true" />
+	<a href="/timesheet/" data-role="button" data-transition="pop" data-inline="true">キャンセル</a>
 </form>
 
 
