--- a/templates/timesheetapp/index.html
+++ b/templates/timesheetapp/index.html
@@ -7,8 +7,8 @@
 
     <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
 	
-	
-
+<h2>Menu</h2>
+<a href="/edit_user/" data-role="button" data-transition="pop">アカウント編集</a>
 <a href="/logout/" data-role="button" data-transition="pop">ログアウト</a>
 
 {% endblock %}
